2019-02-02  Paul Thomas  <pault@gcc.gnu.org>

PR fortran/88980
	* trans-array.c (gfc_array_init_size): Add element_size to the
	arguments.
	(gfc_array_allocate): Remove the recalculation of the size of
	the element and use element_size from the call to the above.
	Unconditionally set the span field of the descriptor.

2019-02-02  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/88980
	* gfortran.dg/realloc_on_assign_32.f90 : New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@268473 138bc75d-0d04-0410-961f-82ee72b054a4